added new slide

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
       <div class="container">
         <article>
-          <div id="front-info">
+          <div id="slide1-text">
             <p>KAZIM</p>            
             <hr>
             <P>COFFEE</P>
@@ -35,10 +35,15 @@
           <p>coffee for special people</p>
           <a><button id="front-menuBtn">go to menu</button></a>
         </article>
-        <img id="front-drink" src="./pictures/drink-photo.png">
+        <img id="front-drink" src="./pictures/drink-ph.png" alt="drink-photo">
       </div>
-      <div class="container">photo1</div>
-      <div class="container">photo2</div>
+      <div class="container">
+        <img id="coffee-types" src="./pictures/types-of-drinks.png" alt="types-of-drinks">
+      </div>
+      <div class="container">
+        <img>
+        <article>Насолоджуйтесь гостинною атмосферою та різноманітними напоями з нашого меню  разом з вашими домашніми улюбленцями!
+          photo2</div>
       <div class="container">photo3</div>
       
     </main>
