--- a/index.html
+++ b/index.html
@@ -26,25 +26,31 @@
     </header>
     <main>
       <div class="container">
-        <article>
-          <div id="slide1-text">
-            <p>KAZIM</p>            
-            <hr>
-            <P>COFFEE</P>
-          </div>
+        <article id="slide1-text">
+          <img id="slide1-logo" src="./pictures/big-logo.png
+          ">          
           <p>coffee for special people</p>
-          <a><button id="front-menuBtn">go to menu</button></a>
+          <a><button id="big-menuBtn">go to menu</button></a>
         </article>
-        <img id="front-drink" src="./pictures/drink-ph.png" alt="drink-photo">
+        <img id="first-drink" src="./pictures/drink-ph.png" alt="drink-photo">
       </div>
       <div class="container">
         <img id="coffee-types" src="./pictures/types-of-drinks.png" alt="types-of-drinks">
       </div>
       <div class="container">
-        <img>
-        <article>Насолоджуйтесь гостинною атмосферою та різноманітними напоями з нашого меню  разом з вашими домашніми улюбленцями!
-          photo2</div>
-      <div class="container">photo3</div>
+        <img id="dog-photo" src="./pictures/dog.JPG">
+        <article id="slide2">
+          <p id="slide2-text">Насолоджуйтесь гостинною атмосферою та різноманітними напоями з нашого меню  разом з вашими домашніми улюбленцями!</p>
+          <img id="friendly-label" src="/pictures/friendly-label.png">
+        </article>
+      </div>
+      <div class="container">
+        <img class="slide3" src="./pictures/inside-ph1.JPG">
+        <article class="slide3">
+          <p id="slide3-text">ПРО НАС
+          KAZIM COFFEE - це не просто кав’ярня, це місце яке коштувало  нам чимало зусиль, аби ви змогли насолодитись  смачною кавою. Ми хочемо розділити з вами свята, побачення та зустрічі з близькими людьми, а наша кава зігріє вас за теплою розмовою</p>
+        </article>
+        <img class="slide3" src="./pictures/inside-ph2.JPG"></div>
       
     </main>
     <footer>working hours insta</footer>
