--- a/index.html
+++ b/index.html
@@ -46,14 +46,25 @@
       </div>
       <div class="container">
         <img class="slide3" src="./pictures/inside-ph1.JPG">
-        <article class="slide3">
-          <p id="slide3-text">ПРО НАС
-          KAZIM COFFEE - це не просто кав’ярня, це місце яке коштувало  нам чимало зусиль, аби ви змогли насолодитись  смачною кавою. Ми хочемо розділити з вами свята, побачення та зустрічі з близькими людьми, а наша кава зігріє вас за теплою розмовою</p>
+        <article class="slide3-text">
+            <p id="slide3-about">ПРО НАС</p>
+            <p id="slide3-text">KAZIM COFFEE - це не просто кав’ярня, це місце яке коштувало  нам чимало зусиль, аби ви змогли насолодитись  смачною кавою. Ми хочемо розділити з вами свята, побачення та зустрічі з близькими людьми, а наша кава зігріє вас за теплою розмовою</p>
         </article>
         <img class="slide3" src="./pictures/inside-ph2.JPG"></div>
-      
     </main>
-    <footer>working hours insta</footer>
+    <footer>
+      <div class="footer-part">
+        <img src="./pictures/icons8-clock.svg">
+        <div>
+          <p>Середа-Понеділок</p>
+          <p>09:00-20:00</p>
+        </div>
+      </div>
+      <div class="footer-part">
+        <img src="./pictures/icons8-instagram.svg">
+        <p id="insta-link"><a href="https://www.instagram.com/kazimcoffee/" target="_blank">kazimcoffee</a></p>
+      </div>
+      </footer>
 
 
     
