--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kazim-coffee</title>
+    <title>KAZIM COFFEE</title>
     <link rel="stylesheet" type="text/css" href="./styles/reset.css"/>
     <link rel="stylesheet" type="text/css" href="./styles/styles-main.css"/>
+    <link rel="icon" type="image/png" href="./pictures/logo.png">
   </head>
   <body>
     <header>
@@ -27,8 +28,7 @@
     <main>
       <div class="container">
         <article id="slide1-text">
-          <img id="slide1-logo" src="./pictures/big-logo.png
-          ">          
+          <img id="slide1-logo" src="./pictures/big-logo.png">          
           <p>coffee for special people</p>
           <a><button id="big-menuBtn">go to menu</button></a>
         </article>
